# rust_cli_wallet

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  multisig_guide.md  run_tests.sh
ldk_data/: keys_seed  ldk_node_data.sqlite
src/: address.rs  lib.rs  main.rs  multisig.rs  transaction.rs  utxo.rs  wallet.rs
src/cli/: ldk_node_quickstart_menu.rs  menu.rs  mod.rs  multisig_menu.rs  wallet_setup.rs
tests/: integration_tests.rs
tests/common/: mod.rs
